--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,87 +3,8 @@ layout: default
 ---
 {% include filters.html %}
 
-<div id="main-frame">
-
-  <nav id="nav-slider">
-  
-    <div id="nav-brand">
-      <!-- <img src="/images/logo/logo-pw.svg"> -->
-    </div>
-  
-    <ul id="nav-menu">
-      <li class="nav-menu-item">
-        <a href=""><i class="fas fa-home"></i><span>Home</span></a>
-      </li>
-      <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 1</span></a>
-      </li>
-      <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 2</span></a>
-      </li>
-      <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 3</span></a>
-      </li>
-      <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 4</span></a>
-      </li>
-    </ul>
-    
-  </nav>
-  
-  <div id="board-slider">
-    <div id="board-wrapper">
-
-      <div id="tag-pool">
-        <ul id="tag-list">
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-all"></input>
-            <label for="tag-all">*</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-maxscript"></input>
-            <label for="tag-maxscript">M</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-gmod"></input>
-            <label for="tag-gmod">GM</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-chrome"></input>
-            <label for="tag-chrome">CE</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-life"></input>
-            <label for="tag-life">L</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-tutorial"></input>
-            <label for="tag-tutorial">T</label>
-          </li>
-        </ul>
-      </div>
-      
-      <div id="article-pool">
-        <ul id="article-list">
-          {% for post in site.posts %}
-            <li class="article-item">
-              <nav class="article-shortcut">
-                <i class="fas fa-bars"></i>
-              </nav>
-              <div class="article-info">
-                <h3><a href={{ post.url }}>{{ post.title }}</a></h3>
-              </div>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-      
-    </div>
-  </div>
-
-</div>
 
 
-<script src="/js/sidebar.js"></script>
+<script src="/js/index.js"></script>
 <script src="/js/canvas.js"></script>
 <script src="/js/canvas_draw.js"></script>
