--- a/css/main.scss
+++ b/css/main.scss
@@ -22,46 +22,15 @@
 // Our variables
 $durationMulti: 1;
 
-$sideWidth: 0.18;
-$poolWidth: 0.12;
 $elementSize: (
-  nav-width: percentage($sideWidth),
-  board-wrapper-width: percentage(1 - $sideWidth),
-  nav-before-width: 6%,
-  nav-menu-item-font: 1rem,
-  nav-menu-item-line: 4,
-  logo-height: 50%,
-  tag-pool-width: percentage($poolWidth),
-  tag-item-font: 1rem,
-  tag-item-line: 3,
-  article-pool-width: percentage(1 - $poolWidth),
-  article-list-width: 86%,
-  article-item-width: 100%,
-  article-item-height: 9rem
+  
 );
 
 $fontColor: (
-  body: #fff,
-  nav-menu: hsla(186, 75%, 50%, 0.4),
-  nav-menu-hover: rgba(255, 255, 255, 1),
-  nav-menu-icon: rgba(255, 255, 255, 0.85),
-  tag-button: rgba(255, 255, 255, 0.9),
-  tag-button-hover: rgba(245, 147, 147, 0.9),
-  article-title: rgba(80, 80, 80, 0.9),
-  article-title-hover: rgba(50, 50, 50, 1),
-  article-shortcut: rgba(255, 255, 255, 0.95)
+  
 );
 $bgColor: (
-  body: rgba(20, 20, 20, 1),
-  nav: rgba(40, 40, 40, 0.1),
-  slider: rgba(0, 0, 0, 0.15),
-  article-item: linear-gradient(100deg, rgba(50, 50, 55, 0.3) 10%, rgba(70, 70, 75, 0.3) 100%)
-);
-$borderColor: (
-  // nav-menu: linear-gradient(to right, hsl(220, 100%, 60%) 0%, hsl(10, 100%, 60%) 100%),
-  nav-menu: rgba(150, 150, 150, 1),
-  nav-menu-item: rgba(0, 0, 0, 0.2),
-  article-shortcut: rgba(0, 0, 0, 0.4)
+  body: #fff
 );
 
 
@@ -72,8 +41,6 @@ $borderColor: (
   "mixins",
   "functions",
   "shared",
-  "sidebar",
-  "items_tag",
-  "items_article"
+  "extend"
 ;
 
