--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -1,4 +1,22 @@
 
 body {
   overflow: hidden;
+  background-image: url("/images/bg/bg-before.svg");
+}
+
+$left: 40%;
+$stripe-color: rgba(60, 60, 60, 1);
+body::after {
+  transform: skewX(-10deg);
+  display: block;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: bgColor(body-after);
+  background-image: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
+  background-size: 11px 11px;
+  border-left: medium solid rgba(10, 10, 10, 1);
+  box-shadow: 0px 0px 0.5rem 0.15rem black;
+  position: absolute;
+  left: $left;
 }
