--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,9 @@ layout: default
 ---
 {% include filters.html %}
 
-
+<div id="showcase">
+  
+</div>
 
 <script src="/js/index.js"></script>
 <script src="/js/canvas.js"></script>
