--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,12 @@ layout: default
 ---
 {% include filters.html %}
 
+<div id="layer"></div>
+
+<div id="cover">
+  <div class="stripes"></div>
+</div>
+
 <div id="showcase">
   
 </div>
