--- a/css/main.scss
+++ b/css/main.scss
@@ -31,14 +31,15 @@ $fontColor: (
 );
 $bgColor: (
   body: #fff,
-  body-before: rgba(30, 30, 30, 1)
+  cover: rgba(30, 30, 30, 1),
+  showcase: rgba(30, 30, 30, 1)
 );
 
 
 // Import partials from `sass_dir` (default as `_sass`)
 @import
   "helpers",
-  
+
   "mixins",
   "functions",
   "shared",
