--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -1,32 +1,45 @@
 
 body {
   overflow: hidden;
+}
+
+#layer {
+  width: 100%;
+  height: 100%;
   background-image: url("/images/bg/bg.svg");
+  position: absolute;
 }
 
 $left: 40%;
 $stripe-color: rgba(60, 60, 60, 1);
-body::before {
+#cover {
   transform: skewX(-10deg);
-  display: block;
-  content: "";
   width: 100%;
   height: 100%;
-  background-color: bgColor(body-before);
-  background-image: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
-  background-size: 11px 11px;
-  border-left: medium solid rgba(10, 10, 10, 1);
-  box-shadow: 0px 0px 0.5rem 0.15rem black;
+  // border-left: medium solid rgba(10, 10, 10, 1);
+  // box-shadow: 0px 0px 0.5rem 0.15rem black;
   position: absolute;
   left: $left;
+  overflow: hidden;
+
+  .stripes {
+    transform: skewX(10deg);
+    width: 200%;
+    height: 100%;
+    background-color: bgColor(cover);
+    background-image: linear-gradient(-45deg, $stripe-color 5.56%, transparent 5.56%, transparent 50%, $stripe-color 50%, $stripe-color 55.56%, transparent 55.56%, transparent 100%);
+    background-size: 11px 11px;
+    position: relative;
+    left: -50%;
+  }
 }
 
 
 #showcase {
-  background-color: rgba(30, 30, 30, 1);
   width: 70%;
   height: 70%;
-  box-shadow: 0px 0px 0.5rem 0.1rem black;
+  background-color: bgColor(showcase);
+  // box-shadow: 0px 0px 0.5rem 0.1rem black;
   position: absolute;
   top: 15%;
   left: 15%;
