--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,9 @@
 $durationMulti: 1;
 
 $elementSize: (
-  
+  menu-button-width: 30px,
+  menu-button-height: 20px,
+  menu-button-bar: 2px
 );
 
 $fontColor: (
