--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,8 @@ layout: default
 
 <div id="layer"></div>
 
+<button class="menu-button"><span>Menu</span></button>
+
 <div id="cover">
   <div class="stripes"></div>
 </div>
