--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -13,7 +13,7 @@ body {
   background-color: bgColor(body);
 }
 
-div, nav, menu, ol, ul, li {
+div, nav, menu, ol, ul, li, button {
   margin: 0;
   padding: 0;
 }
