--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -11,16 +11,28 @@ body {
 }
 
 $size: 70%;
-.menu-button {
+.fancy-button {
   position: absolute;
-  top: (100% - $size) / 2;
-  margin: 0.5rem 2rem;
-  width: elementSize(menu-button-width);
-  height: elementSize(menu-button-height);
   cursor: pointer;
   border: none;
   outline: none;
   background: transparent;
+}
+
+.tag-button {
+  top: (100% - $size) / 2 + $size;
+  margin: -(elementSize(tag-button-size) + 4px) 2rem;
+  width: elementSize(tag-button-size);
+  height: elementSize(tag-button-size);
+  background-image: url("/images/icon/tags.svg");
+  background-repeat: no-repeat;
+}
+
+.menu-button {
+  top: (100% - $size) / 2;
+  margin: 0.5rem 2rem;
+  width: elementSize(menu-button-width);
+  height: elementSize(menu-button-height);
 }
 
 .menu-button::before,
