--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,8 @@ $durationMulti: 1;
 $elementSize: (
   menu-button-width: 30px,
   menu-button-height: 20px,
-  menu-button-bar: 2px
+  menu-button-bar: 2px,
+  tag-button-size: 32px
 );
 
 $fontColor: (
