--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,8 +5,8 @@ layout: default
 
 <div id="layer"></div>
 
-<button class="fancy-button menu-button"><span>Menu</span></button>
-<button class="fancy-button tag-button"></button>
+<button class="flat-button menu-button"><span>Menu</span></button>
+<button class="flat-button tag-button"></button>
 
 <div id="cover">
   <div class="stripes"></div>
