--- a/_includes/library.html
+++ b/_includes/library.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/fonts/fa/fontawesome-all.min.css">
+<link rel="stylesheet" href="/fonts/fa/all.min.css">
+<script defer="" src="/fonts/fa/all.js"></script>
 <link rel="stylesheet" href="/fonts/vicons/vicons-font.css">
 
 <script src="/library/jquery-3.2.1.min.js"></script>
