--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,13 @@ layout: default
   
 </div>
 
+<div id="social">
+  <a class="link link--social" href="#"><i class="fab fa-twitter"></i><span class="text-hidden">Twitter</span></a>
+  <a class="link link--social" href="#"><i class="fab fa-linkedin"></i><span class="text-hidden">LinkedIn</span></a>
+  <a class="link link--social" href="#"><i class="fab fa-facebook"></i><span class="text-hidden">Facebook</span></a>
+  <a class="link link--social" href="#"><i class="fa fa-youtube-play"></i><span class="text-hidden">YouTube</span></a>
+</div>
+
 <script src="/js/index.js"></script>
 <script src="/js/canvas.js"></script>
 <script src="/js/canvas_draw.js"></script>
