--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -72,6 +72,18 @@ $size: 70%;
 	transform: translate3d(0, (elementSize(menu-button-height) / 2), 0) scale3d(0.8, 1, 1);
 }
 
+.menu-button--open span {
+	opacity: 0;
+}
+
+.menu-button--open::before {
+	transform: rotate3d(0, 0, 1, 45deg);
+}
+
+.menu-button--open::after {
+	transform: rotate3d(0, 0, 1, -45deg);
+}
+
 $left: 40%;
 $stripe-color: rgba(60, 60, 60, 1);
 #cover {
@@ -106,6 +118,10 @@ $stripe-color: rgba(60, 60, 60, 1);
   top: (100% - $size) / 2;
   left: (100% - $size) / 2;
   transition: all #{ 400 * $durationMulti }ms ease-out;
+}
+
+.showcase--open {
+  transform: rotate3d(0, 1, 0, -15deg);
 }
 
 #social {
