--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -110,7 +110,7 @@ $stripe-color: rgba(60, 60, 60, 1);
 
 #showcase {
   transform-origin: 100% 50%;
-  width: $size;
+  width: $size + 5%;
   height: $size;
   background-color: bgColor(showcase);
   // box-shadow: 0px 0px 0.5rem 0.1rem black;
@@ -118,10 +118,21 @@ $stripe-color: rgba(60, 60, 60, 1);
   top: (100% - $size) / 2;
   left: (100% - $size) / 2;
   transition: all #{ 400 * $durationMulti }ms ease-out;
+  -webkit-mask: linear-gradient(80deg, black 90%, transparent 92%);
 }
 
 .showcase--open {
   transform: rotate3d(0, 1, 0, -15deg);
+}
+
+#articles {
+  transform: skewX(10deg);
+  width: 45%;
+  height: 100%;
+  border-left: medium solid rgba(90, 90, 90, 1);
+  border-right: medium solid rgba(90, 90, 90, 1);
+  position: absolute;
+  left: 45%;
 }
 
 #social {
