--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,13 @@ layout: default
 </div>
 
 <div id="showcase">
-  <div id="articles">
-    
+  <div id="articles-wrapper">
+    <div id="articles">
+      {% for post in site.posts %}
+        <div class="article">
+        </div>
+      {% endfor %}
+    </div>
   </div>
 </div>
 
