--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -125,14 +125,29 @@ $stripe-color: rgba(60, 60, 60, 1);
   transform: rotate3d(0, 1, 0, -15deg);
 }
 
-#articles {
+#articles-wrapper {
   transform: skewX(10deg);
   width: 45%;
   height: 100%;
   border-left: medium solid rgba(90, 90, 90, 1);
-  border-right: medium solid rgba(90, 90, 90, 1);
+  border-right: thin solid rgba(90, 90, 90, 1);
   position: absolute;
   left: 45%;
+}
+
+#articles {
+  width: 88%;
+  height: 110%;
+  box-shadow: 0px 0px 0.5rem 0.02rem black inset;
+  position: absolute;
+  top: -5%;
+  left: 10%;
+}
+
+.article {
+  width: 100%;
+  height: 14rem;
+  border-bottom: thin solid rgba(0, 0, 0, 0.5);
 }
 
 #social {
