--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -118,7 +118,7 @@ $stripe-color: rgba(60, 60, 60, 1);
   top: (100% - $size) / 2;
   left: (100% - $size) / 2;
   transition: all #{ 400 * $durationMulti }ms ease-out;
-  -webkit-mask: linear-gradient(80deg, black 90%, transparent 92%);
+  // -webkit-mask: linear-gradient(80deg, black 90%, transparent 92%);
 }
 
 .showcase--open {
@@ -126,28 +126,47 @@ $stripe-color: rgba(60, 60, 60, 1);
 }
 
 #articles-wrapper {
-  transform: skewX(10deg);
+  // transform: skewX(10deg);
   width: 45%;
   height: 100%;
-  border-left: medium solid rgba(90, 90, 90, 1);
-  border-right: thin solid rgba(90, 90, 90, 1);
+  // border-right: thin solid rgba(90, 90, 90, 1);
   position: absolute;
   left: 45%;
 }
 
 #articles {
+  list-style-type: none;
   width: 88%;
-  height: 110%;
-  box-shadow: 0px 0px 0.5rem 0.02rem black inset;
+  height: 104%;
+  // box-shadow: 0px 0px 0.5rem 0.02rem black inset;
   position: absolute;
-  top: -5%;
+  top: -2%;
   left: 10%;
+  overflow: hidden;
 }
 
 .article {
+  margin: 0.5rem 0;
   width: 100%;
   height: 14rem;
   border-bottom: thin solid rgba(0, 0, 0, 0.5);
+  position: relative;
+  // top: 5%;
+  overflow: hidden;
+  
+  img {
+    opacity: 0.4;
+  }
+  
+  .article-title {
+    font-family: Daville;
+    color: rgba(0, 0, 0, 0.8);
+    // transform: skewX(-20deg);
+    margin: -2rem 0;
+    position: absolute;
+    top: 100%;
+    left: 1rem;
+  }
 }
 
 #social {
