--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -131,33 +131,34 @@ $stripe-color: rgba(60, 60, 60, 1);
   height: 100%;
   // border-right: thin solid rgba(90, 90, 90, 1);
   position: absolute;
-  left: 45%;
+  left: 50%;
 }
 
 #articles {
   list-style-type: none;
-  width: 88%;
-  height: 104%;
+  width: 120%;
+  height: 100%;
   // box-shadow: 0px 0px 0.5rem 0.02rem black inset;
   position: absolute;
-  top: -2%;
-  left: 10%;
+  top: 2%;
+  left: 0%;
   overflow: hidden;
 }
 
 .article {
   margin: 0.5rem 0;
-  width: 100%;
-  height: 14rem;
-  border-bottom: thin solid rgba(0, 0, 0, 0.5);
+  width: 98%;
+  height: 10rem;
+  box-shadow: 2px 2px 0px 0.1rem rgba(10, 10, 10, 1);
   position: relative;
   // top: 5%;
   overflow: hidden;
-  
+
   img {
-    opacity: 0.4;
+    width: 100%;
+    opacity: 0.5;
   }
-  
+
   .article-title {
     font-family: Daville;
     color: rgba(0, 0, 0, 0.8);
