--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,17 @@ layout: default
   <div class="stripes"></div>
 </div>
 
-<button class="flat-button menu-button"><span>Menu</span></button>
-<button class="flat-button tag-button"></button>
+<div id="edge">
+  <div class="edge-button">
+    <button class="flat-button menu-button">
+      <span>Menu</span>
+    </button>
+  </div>
+  <div class="edge-button">
+    <button class="flat-button tag-button">
+    </button>
+  </div>
+</div>
 
 <div id="groove">
   <nav class="menu-wrapper">
