--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
   <div class="stripes"></div>
 </div>
 
-<div id="edge">
+<aside>
   <div class="edge-button">
     <button class="flat-button menu-button">
       <span>Menu</span>
@@ -19,7 +19,7 @@ layout: default
     <button class="flat-button tag-button">
     </button>
   </div>
-</div>
+</aside>
 
 <div id="groove">
   <nav class="menu-wrapper">
