--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,17 +24,17 @@ layout: default
 <div id="groove">
   <nav class="menu-wrapper">
     <h1>Home</h1>
-    
+
     <a class="menu-item">
       <figure><i class="far fa-newspaper"></i></figure>
       <span>Timeline</span>
     </a>
-    
+
     <a class="menu-item">
       <figure><i class="far fa-edit"></i></figure>
       <span>Works</span>
     </a>
-    
+
     <a class="menu-item">
       <figure><i class="far fa-user"></i></figure>
       <span>About Me</span>
@@ -49,6 +49,10 @@ layout: default
       {% endfor %}
     </ul>
   </div>
+</div>
+
+<div id="navigator">
+  <span>Middle</span>
 </div>
 
 <div id="social">
