--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -215,15 +215,24 @@ $count: 4;
 }
 
 #navigator {
+  cursor: pointer;
   width: 10%;
   position: absolute;
   top: 90%;
   left: 45%;
 
-  &::before, &::after {
-    content: '';
+  *, &::before, &::after {
     transform: skewX(-10deg);
     display: inline-block;
+    transition: width 0.25s;
+  }
+
+  &:hover::before, &:hover::after {
+    border: thin solid white;
+  }
+
+  &::before, &::after {
+    content: '';
     height: 5px;
     background-color: #5f656f;
     opacity: 0.75;
@@ -237,8 +246,6 @@ $count: 4;
   }
 
   span {
-    transform: skewX(-10deg);
-    display: inline-block;
     text-indent: 100%;
     width: 5%;
     height: 5px;
