--- a/_sass/extend.scss
+++ b/_sass/extend.scss
@@ -220,6 +220,7 @@ $count: 4;
   position: absolute;
   top: 90%;
   left: 45%;
+  opacity: 0.75;
 
   *, &::before, &::after {
     transform: skewX(-10deg);
@@ -233,9 +234,8 @@ $count: 4;
 
   &::before, &::after {
     content: '';
-    height: 5px;
+    height: 0.25rem;
     background-color: #5f656f;
-    opacity: 0.75;
   }
 
   &::before {
@@ -248,8 +248,8 @@ $count: 4;
   span {
     text-indent: 100%;
     width: 5%;
-    height: 5px;
-    background-color: hsla(0, 100%, 50%, 0.5);
+    height: 0.25rem;
+    background-color: crimson;
     overflow: hidden;
   }
 }
