--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,27 +24,26 @@ layout: default
 <div id="groove">
   <nav class="menu-wrapper">
     <h1>Home</h1>
-
-    <a class="menu-item">
-      <figure><i class="far fa-newspaper"></i></figure>
-      <span>Timeline</span>
-    </a>
-
-    <a class="menu-item">
-      <figure><i class="far fa-edit"></i></figure>
-      <span>Works</span>
-    </a>
-
-    <a class="menu-item">
-      <figure><i class="far fa-user"></i></figure>
-      <span>About Me</span>
-    </a>
+    <ul>
+      <li class="menu-item">
+        <a href="#"><figure><i class="far fa-newspaper"></i></figure></a>
+        <a href="#"><span>Timeline</span></a>
+      </li>
+      <li class="menu-item">
+        <a href="#"><figure><i class="far fa-edit"></i></figure></a>
+        <a href="#"><span>Works</span></a>
+      </li>
+      <li class="menu-item">
+        <a href="#"><figure><i class="far fa-user"></i></figure></a>
+        <a href="#"><span>About Me</span></a>
+      </li>
+    </ul>
   </nav>
   <div class="articles-wrapper">
     <ul id="articles">
       {% for post in site.posts %}
         <li class="article">
-          <h3 class="article-title">{{ post.title }}</h3>
+          <h3 class="article-title"><a href="#">{{ post.title }}</a></h3>
         </li>
       {% endfor %}
     </ul>
@@ -59,7 +58,7 @@ layout: default
   <a class="link link--social" href="#"><i class="fab fa-twitter"></i><span class="text-hidden">Twitter</span></a>
   <a class="link link--social" href="#"><i class="fab fa-linkedin"></i><span class="text-hidden">LinkedIn</span></a>
   <a class="link link--social" href="#"><i class="fab fa-facebook"></i><span class="text-hidden">Facebook</span></a>
-  <a class="link link--social" href="#"><i class="fa fa-youtube-play"></i><span class="text-hidden">YouTube</span></a>
+  <a class="link link--social" href="#">!</a>
 </div>
 
 <script src="/js/index.js"></script>
