--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,14 @@ layout: default
       <span>Menu</span>
     </button>
   </div>
+  <ul id="tags">
+    <li class="tag">tag1</li>
+    <li class="tag">tag2</li>
+    <li class="tag">tag3</li>
+    <li class="tag">tag4</li>
+    <li class="tag">tag5</li>
+    <li class="tag">tag6</li>
+  </ul>
   <div class="edge-button">
     <button class="flat-button tag-button">
     </button>
@@ -26,16 +34,22 @@ layout: default
     <h1>Home</h1>
     <ul>
       <li class="menu-item">
-        <a href="#"><figure><i class="far fa-newspaper"></i></figure></a>
-        <a href="#"><span>Timeline</span></a>
+        <a href="#">
+          <span><i class="far fa-newspaper"></i></span>
+          <span>Timeline</span>
+        </a>
       </li>
       <li class="menu-item">
-        <a href="#"><figure><i class="far fa-edit"></i></figure></a>
-        <a href="#"><span>Works</span></a>
+        <a href="#">
+          <span><i class="far fa-edit"></i></span>
+          <span>Works</span>
+        </a>
       </li>
       <li class="menu-item">
-        <a href="#"><figure><i class="far fa-user"></i></figure></a>
-        <a href="#"><span>About Me</span></a>
+        <a href="#">
+          <span><i class="far fa-user"></i></span>
+          <span>About Me</span>
+        </a>
       </li>
     </ul>
   </nav>
