--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
       <span>Menu</span>
     </button>
   </div>
-  <ul id="tags">
+  <ul class="tags">
     <li class="tag">tag1</li>
     <li class="tag">tag2</li>
     <li class="tag">tag3</li>
