--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@ layout: default
 </div>
 
 <div id="navigator">
-  <span>Middle</span>
+  <span></span><span></span><span></span>
 </div>
 
 <div id="social">
