--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@ layout: default
 </div>
 
 <div id="navigator">
-  <span></span><span></span><span></span>
+  {% for i in (1..3) %}<span></span>{% endfor %}
 </div>
 
 <div id="social">
