--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,7 +72,7 @@ layout: default
   <a class="link link--social" href="#"><i class="fab fa-twitter"></i><span class="text-hidden">Twitter</span></a>
   <a class="link link--social" href="#"><i class="fab fa-linkedin"></i><span class="text-hidden">LinkedIn</span></a>
   <a class="link link--social" href="#"><i class="fab fa-facebook"></i><span class="text-hidden">Facebook</span></a>
-  <a class="link link--social" href="#">!</a>
+  <a class="link link--social" href="#"><i class="fab fa-youtube"></i><span class="text-hidden">YouTube</span></a>
 </div>
 
 <script src="/js/index.js"></script>
