--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ $elementSize: (
 );
 
 $fontColor: (
-  
+
 );
 
 
@@ -41,6 +41,8 @@ $fontColor: (
   "mixins",
   "functions",
   "shared",
-  "extend"
+  "extend",
+
+  "page"
 ;
 
