--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,32 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<!-- <article class="post" itemscope itemtype="http://schema.org/BlogPosting"> -->
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
-    <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
-      <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span>
-    </p>
-  </header>
+  <!-- <header class="post-header"> -->
+    <!-- <h1 class="post-title" itemprop="headline">{{ page.title }}</h1> -->
+    <!-- <p class="post-meta"> -->
+      <!-- <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time> -->
+      <!-- <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span> -->
+    <!-- </p> -->
+  <!-- </header> -->
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
+  <!-- <div class="post-content" itemprop="articleBody"> -->
+    <!-- {{ content }} -->
+  <!-- </div> -->
+
+<!-- </article> -->
+
+<header id="page-header">
+  <div id="search"></div>
+</header>
+
+<main id="page-main">
+
+  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  </article>
+
+  <div id="outline">
   </div>
 
-</article>
+</main>
