--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,11 @@ layout: default
 <main id="page-main">
 
   <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+    <nav>
+      <span><a href="#">Home</a></span>
+      <span><a href="#">Post</a></span>
+      <span>this article</span>
+    </nav>
   </article>
 
   <div id="outline">
