--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -13,7 +13,7 @@ body {
   background-color: #fff;
 }
 
-div, nav, ol, ul, li, button, img {
+div, nav, ol, ul, li, button, article, img {
   margin: 0;
   padding: 0;
 }
