--- a/css/page.scss
+++ b/css/page.scss
@@ -18,6 +18,11 @@
   src: url(/fonts/daville/Daville-Condensed-Slanted.ttf);
 }
 
+@font-face {
+  font-family: Helvetica;
+  src: url(/fonts/helvetica/Helvetica.ttf);
+}
+
 
 // Our variables
 $durationMulti: 1;
