--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,40 +6,33 @@
 
   <body>
 
-    <!-- <article class="post" itemscope itemtype="http://schema.org/BlogPosting"> -->
-
-      <!-- <header class="post-header"> -->
-        <!-- <h1 class="post-title" itemprop="headline">{{ page.title }}</h1> -->
-        <!-- <p class="post-meta"> -->
-          <!-- <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time> -->
-          <!-- <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span> -->
-        <!-- </p> -->
-      <!-- </header> -->
-
-      <!-- <div class="post-content" itemprop="articleBody"> -->
-        <!-- {{ content }} -->
-      <!-- </div> -->
-
-    <!-- </article> -->
-
     <header id="page-header">
-      <div id="search"></div>
     </header>
-
     <main id="page-main">
+      <nav>
+        <span><a href="#">Home</a></span>
+        <span><a href="#">Post</a></span>
+        <span>this article</span>
+      </nav>
 
       <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-        <nav>
-          <span><a href="#">Home</a></span>
-          <span><a href="#">Post</a></span>
-          <span>this article</span>
-        </nav>
+        <header class="post-header">
+          <h1 class="post-title" itemprop="headline">{{ page.title }}</h1>
+          <p class="post-meta">
+            <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %dth - %Y" }}</time>
+            <span class="post-author" itemprop="author" itemscope itemtype="http://schema.org/Person">by: {{ site.author }}</span>
+          </p>
+        </header>
+
+        <div class="post-content" itemprop="articleBody">
+          {{ content }}
+        </div>
       </article>
-
-      <div id="outline">
-      </div>
-
     </main>
+
+    <div id="search"></div>
+    <div id="outline">
+    </div>
 
   </body>
 
